--- a/SearchLight -- Tame Your Databases.ipynb
+++ b/SearchLight -- Tame Your Databases.ipynb
@@ -23,6 +23,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And add nice rendering."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Base.show\n",
+    "\n",
+    "function show(io::IO, t::Todo)\n",
+    "  time_diff = t.due_at - Dates.today()\n",
+    "  time_diff = time_diff < Dates.Day(0) ? -time_diff : time_diff\n",
+    "\n",
+    "  Base.printstyled(\n",
+    "    io,\n",
+    "    (t.completed ? \"✅\" : \"❌\") * \" \" * \n",
+    "    t.subject *\n",
+    "    (t.completed ? \" \" : (t.due_at < Dates.today() ? \" (due $time_diff ago)\" : \" due in $time_diff\")),\n",
+    "    color = (t.due_at < Dates.today() ? :red : :green)\n",
+    "  )\n",
+    "end"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -120,35 +149,6 @@
     "    completed = false, \n",
     "    due_at = Dates.today() + Dates.Day(7)\n",
     ") = Todo(subject, completed, due_at, DbId())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And add nice rendering."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import Base.show\n",
-    "\n",
-    "function show(io::IO, t::Todo)\n",
-    "  time_diff = t.due_at - Dates.today()\n",
-    "  time_diff = time_diff < Dates.Day(0) ? -time_diff : time_diff\n",
-    "\n",
-    "  Base.printstyled(\n",
-    "    io,\n",
-    "    (t.completed ? \"✅\" : \"❌\") * \" \" * \n",
-    "    t.subject *\n",
-    "    (t.completed ? \" \" : (t.due_at < Dates.today() ? \" (due $time_diff ago)\" : \" due in $time_diff\")),\n",
-    "    color = (t.due_at < Dates.today() ? :red : :green)\n",
-    "  )\n",
-    "end"
    ]
   },
   {
@@ -685,6 +685,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the validation rules:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -709,7 +716,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using SearchLight.QueryBuilder"
+    "Dict(\n",
+    "    \"host\"     => \"127.0.0.1\",\n",
+    "    \"username\" => \"adrian\",\n",
+    "    \"port\"     => 5432, \n",
+    "    \"database\" => \"todoapp_dev\",\n",
+    "    \"adapter\"  => \"PostgreSQL\") |> SearchLight.Database.connect!"
    ]
   },
   {
@@ -718,12 +730,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Dict(\n",
-    "    \"host\"     => \"127.0.0.1\",\n",
-    "    \"username\" => \"adrian\",\n",
-    "    \"port\"     => 5432, \n",
-    "    \"database\" => \"todoapp_dev\",\n",
-    "    \"adapter\"  => \"PostgreSQL\") |> SearchLight.Database.connect!"
+    "using SearchLight.QueryBuilder"
    ]
   },
   {
