--- a/SearchLight -- Tame Your Databases.ipynb
+++ b/SearchLight -- Tame Your Databases.ipynb
@@ -9,6 +9,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pkg.clone(\"https://github.com/essenciary/SearchLight.jl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -620,7 +629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exit()"
+    "exit() # restart the Kernel"
    ]
   },
   {
@@ -887,13 +896,6 @@
    "source": [
     "SearchLight.sql(todo)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
