--- a/SearchLight -- Tame Your Databases.ipynb
+++ b/SearchLight -- Tame Your Databases.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pkg.clone(\"https://github.com/essenciary/SearchLight.jl\")"
+    "# Pkg.clone(\"https://github.com/essenciary/SearchLight.jl\") ### Only supports v0.7 and up"
    ]
   },
   {
